--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
 
     <color name="black_color">#000000</color>
     <color name="pastel_color">#FFF0F5</color>
+    <color name="rosybrown">#BC8F8F</color>
+    <color name="powderblue">#B0E0E6</color>
 
     <color name="button_transparent_background">#00000000</color>
+    <color name="drawer_background">#FFFFFF</color>
+
 </resources>
