tab/collapseActionView/toolbar

--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -37,7 +37,7 @@
     <FrameLayout
         android:id="@+id/sub_fragment"
         android:layout_width="match_parent"
-        android:layout_height="410dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="155dp"
         android:background="@color/drawer_background">
 
