--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.apple.test_app.MainActivity">
+    tools:context="com.example.apple.test_app.MainActivity"
+    tools:showIn="@layout/activity_main_content">
 
     <TextView
+        android:id="@+id/info_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_info"
