--- a/app/src/main/res/layout/drawer_main_activity.xml
+++ b/app/src/main/res/layout/drawer_main_activity.xml
@@ -4,11 +4,10 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
     <include
-        layout="@layout/activity_main"
+        layout="@layout/activity_main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -18,7 +17,6 @@
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
         tools:layout="@layout/fragment_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
