--- a/app/src/main/res/layout/fragment_search_info.xml
+++ b/app/src/main/res/layout/fragment_search_info.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:text="검색결과 : "
+        android:text="검색명(사람이름) : "
         android:textColor="@color/black_color"
         android:textStyle="bold" />
 
@@ -18,10 +18,129 @@
         android:id="@+id/search_value_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
+        android:layout_marginLeft="90dp"
         android:layout_marginTop="5dp"
         android:text="*"
         android:textColor="@color/black_color"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/user_info_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/search_value_textview"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="55dp"
+        android:text="이름 : "
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/search_name_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="55dp"
+        android:text="*"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/search_people_imageview"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="240dp"
+        android:layout_marginTop="40dp"
+        android:src="@mipmap/ic_folder_x" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/search_people_imageview"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="160dp"
+        android:text="부서 : "
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/department_name_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="160dp"
+        android:text="*"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/department_name_textview"
+        android:layout_marginTop="10dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="200dp"
+        android:text="소개 : "
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/introduction_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="200dp"
+        android:text="*"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/introduction_textview"
+        android:layout_marginTop="10dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="240dp"
+        android:text="기타사항 : "
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/etc_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="240dp"
+        android:text="*"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/etc_textview"
+        android:layout_marginTop="10dp"
+        android:background="@mipmap/line" />
 </RelativeLayout>
