--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="button_transparent_background">#00000000</color>
     <color name="drawer_background">#FFFFFF</color>
 
+    <color name="popup_background">#A1000000</color>
+
 </resources>
