--- a/app/src/main/res/layout/content_human_info_update.xml
+++ b/app/src/main/res/layout/content_human_info_update.xml
@@ -9,7 +9,134 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.apple.test_app.HumanInfoUpdate"
+    tools:context="com.example.apple.test_app.HumanAddActivity"
     tools:showIn="@layout/activity_human_info_update">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#af02ff"
+        android:text="수정내용 작성"
+        android:textAlignment="center"
+        android:textColor="@color/black_color"
+        android:textSize="20dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="이름   :"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/name_edittext"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="38dp"
+        android:background="@android:drawable/editbox_background_normal"
+        android:textSize="10dp" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/name_edittext"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="부서명 :"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/departmentname_edittext"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="88dp"
+        android:background="@android:drawable/editbox_background_normal"
+        android:textSize="10dp" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/departmentname_edittext"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:text="전화번호    :"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/tel_edittext"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="138dp"
+        android:background="@android:drawable/editbox_background_normal"
+        android:hint="'-'없이 입력"
+        android:inputType="number"
+        android:textSize="10dp" />
+
+    <TextView
+        android:layout_width="320dp"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/tel_edittext"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:text="현 주소지    :"
+        android:textColor="@color/black_color"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/address_edittext"
+        android:layout_width="240dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="188dp"
+        android:background="@android:drawable/editbox_background_normal"
+        android:textSize="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="510dp"
+        android:text="[수정양식]"
+        android:textColor="@color/black_color"
+        android:textSize="10dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/humanimage_imageview"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="40dp"
+        android:background="@mipmap/profile_hambur" />
+
+    <ImageButton
+        android:id="@+id/imageadd_button"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="280dp"
+        android:layout_marginTop="110dp"
+        android:background="@color/button_transparent_background"
+        android:src="@mipmap/btn_profileedit" />
 
 </RelativeLayout>
