--- a/app/src/main/res/layout/fragment_option1.xml
+++ b/app/src/main/res/layout/fragment_option1.xml
@@ -1,24 +1,133 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="250dp"
     android:layout_height="match_parent"
     android:background="@color/rosybrown"
     tools:context="com.example.apple.test_app.fragment.Option1Fragment">
 
+    <ImageView
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="195dp"
+        android:layout_marginTop="5dp"
+        android:src="@mipmap/my_info_setting_image" />
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:text="option1 fragment"
-        android:textColor="@color/black_color" />
-
-    <Button
-        android:id="@+id/click_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="button 1" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="나의 정보"
+        android:textColor="@color/black_color"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
-</FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="60dp"
+        android:text="* 이름      : "
+        android:textColor="@color/black_color"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/name_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="60dp"
+        android:text="*"
+        android:textColor="@color/black_color"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/name_textview"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="90dp"
+        android:text="* 이메일    : "
+        android:textColor="@color/black_color"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/email_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="90dp"
+        android:text="*"
+        android:textColor="@color/black_color"
+        android:textSize="12dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/email_textview"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="120dp"
+        android:text="* 성별      : "
+        android:textColor="@color/black_color"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/gender_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="120dp"
+        android:text="*"
+        android:textColor="@color/black_color"
+        android:textSize="12dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_dimen"
+        android:layout_below="@+id/gender_textview"
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/line" />
+
+    <Button
+        android:id="@+id/email_link_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:text="내 이메일로 이동"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/kakaotalk_link_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="240dp"
+        android:text="카카오톡 실행"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/logout_button"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="400dp"
+        android:src="@mipmap/logout_button_image" />
+
+</RelativeLayout>
