SNS Login / SharedPreference

--- a/app/src/main/res/layout/fragment_option1.xml
+++ b/app/src/main/res/layout/fragment_option1.xml
@@ -111,7 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:text="내 이메일로 이동"
+        android:text="내 이메일로 이동(G-Mail)"
         android:textStyle="bold" />
 
     <Button
